# AOC2025

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  day1.cpp
day2/: CMakeLists.txt  day2.cpp  input.txt
day3/: .day3.cpp.swp  .input.txt.swp  CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
include/: constants.hpp  files.hpp
